fix: 调整collapse,table可以适配antd4.16.6

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -117,8 +117,8 @@
 
 // Collapse
 // ---
-@collapse-header-padding: 12px 16px;
-@collapse-header-padding-extra: 42px;
+@collapse-header-padding: 12px 12px;
+@collapse-header-padding-extra: 40px;
 @collapse-header-bg: var(--collapse-header-bg);
 @collapse-content-bg: var(--collapse-content-bg);
 
